[gd_scene load_steps=4 format=3 uid="uid://c5yv22wj778mw"]

[ext_resource type="Script" uid="uid://wgd6h15at4jc" path="res://Characters/Components/teleport_projectile.gd" id="1_rg2jc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_proj"]
radius = 11.045361

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glow"]
albedo_color = Color(0, 0.5, 1, 1)
emission_enabled = true
emission = Color(0, 0.5, 1, 1)

[node name="TeleportProjectile" type="Area2D"]
collision_layer = 0
script = ExtResource("1_rg2jc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_proj")

[node name="Panel" type="Panel" parent="CollisionShape2D"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 11.0

[node name="Sprite2D" type="ColorRect" parent="."]
material = SubResource("StandardMaterial3D_glow")
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
